# portstudy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-dev.yml  build-release.yml  publish.yml
src/portstudy/: __init__.py  __main__.py  run.py
src/portstudy/cli/: __init__.py  main.py
src/portstudy/config/: __init__.py  settings.py
src/portstudy/core/: __init__.py  game_state.py  question_generator.py  state_manager.py
src/portstudy/data/: ports.json
src/portstudy/ui/: __init__.py  display.py  menu.py
src/portstudy/utils/: __init__.py  paths.py
