[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portstudy"
version = "2.4.0"
description = "A certification/test practice utility for learning network ports and protocols"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MPL-2.0"}
authors = [
    {name = "Tanner Harkin", email = "tannerharkin@users.noreply.github.com"},
]
keywords = ["education", "networking", "certification", "study", "ports", "protocols"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: System :: Networking",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/tannerharkin/portstudy"
Repository = "https://github.com/tannerharkin/portstudy.git"
"Bug Tracker" = "https://github.com/tannerharkin/portstudy/issues"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "build>=1.0.0",
]

[project.scripts]
portstudy = "portstudy.cli.main:main"

[tool.hatch.build]
packages = ["src/portstudy"]
include = [
    "src/portstudy/data/*.json",
]
